test/tests/stages/7_compound_statements/valid/use_in_inner_scope.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  None: 
                  Int: 
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[1]: 
                    CS: 
                      CExpression: 
                        CAssignment: 
                          None: 
                          CVar: 
                            TIdentifier: x
                            None: 
                          CConstant: 
                            CConstInt: 
                              TInt: 3
                            None: 
                          None: 
            CS: 
              CCompound: 
                CB: 
                  List[1]: 
                    CS: 
                      CReturn: 
                        CVar: 
                          TIdentifier: x
                          None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
